# metrics-processor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
metrics/: CounterMetric.h  GaugeMetric.h  Metric.h  MetricsCollector.cpp  MetricsCollector.h
